Fixed nav bar on smaller screens

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -447,7 +447,7 @@
 
 /* MOBILE RESPONSIVO */
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .nav-toggle {
     display: none !important;
   }
